# Render-Layer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  client.cpp  container.h  html_message.h  minutes.md  node.h  server.cpp  stream.h  streamtype.h  test.cpp  utils.h  xml.h
approach/: main.cpp  outline_main.cpp
approach/Render/: Attribute.py  HTML.py  Node.py  Stream.py  XML.php  XML.py  node.h  nullstate.py  outline.h  render.h  xml.h
approach/Render/Node/: Associative.py  Keyed.py
approach/Stream/: container.h  stream.h  streamtype.h
doc/: README.md  Renderer Goals.txt
static/img/: README.md
support/test/: README.md
tests/: doctest.h  test.cpp
